--- a/data/filetypes.scss
+++ b/data/filetypes.scss
@@ -1,29 +1,5 @@
 # For complete documentation of this file, please see Geany's main documentation
-[styling]
-default=default
-comment=comment
-tag=tag
-class=class
-pseudoclass=class
-unknown_pseudoclass=class
-unknown_identifier=class
-operator=operator
-identifier=keyword_1
-doublestring=string_1
-singlestring=string_2
-attribute=attribute
-value=value
-id=number
-identifier2=keyword_2
-important=extra
-directive=preprocessor
-identifier3=keyword_3
-pseudoelement=element
-extended_identifier=keyword_4
-extended_pseudoclass=class
-extended_pseudoelement=element
-media=string_3
-variable=keyword_4
+[styling=CSS]
 
 [keywords]
 # CSS 1 properties
